--- a/ui/index.html
+++ b/ui/index.html
@@ -1,3 +1,14 @@
+<!--!> 
+-----------------------------------------------------------------------------
+-- Better-ID- A Simple FiveM Script, Made By Rocket Development w/ NAT2K15 --
+-----------------------------------------------------------------------------
+----------------------------------------------------------------------------------------------
+                  -- !WARNING! !WARNING! !WARNING! !WARNING! !WARNING! --
+        -- DO NOT TOUCH THIS FILE OR YOU /WILL/ FUCK SHIT UP! THERE IS NOTHING TO EDIT --
+-- DO NOT BE STUPID AND WHINE TO ME ABOUT THIS BEING BROKEN IF YOU TOUCHED THE LINES BELOW. --
+----------------------------------------------------------------------------------------------
+
+</!-->
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 	<link rel="stylesheet" href="style.css" type="text/css">
