Added tutorial on how to make your own events

--- a/ui/index.html
+++ b/ui/index.html
@@ -26,4 +26,11 @@
 		<div class="contenair">
 		</div>
 	</div>
+	<!--
+	<div id="vcard"> -- EDIT YOURS
+		<div class="contenair"> -- EDIT YOURS
+		</div>
+	</div>
+
+	-->
 </body>
